Finish the base of header and footer

--- a/src/app/core/header/components/navbar/navbar.html
+++ b/src/app/core/header/components/navbar/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar">
-  <h1>ESHOPU</h1>
+  <h1>{{nameApp}}</h1>
 
   <ul class="navbar-list">
     <li class="nav-item-list"><a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Accueil</a></li>
