--- a/src/app/core/header/components/header/header.scss
+++ b/src/app/core/header/components/header/header.scss
@@ -7,7 +7,7 @@ header {
   top: 0;
   z-index: 99;
   padding: 2px 12px;
-  background-color: rgb(255, 255, 255);
+  background-color: var(--background);
   box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.2), 0 0 20px 0 rgba(0, 0, 0, 0.19);
 
 }
