--- a/src/app/core/header/components/navbar-searchbar/navbar-searchbar.scss
+++ b/src/app/core/header/components/navbar-searchbar/navbar-searchbar.scss
@@ -3,8 +3,8 @@
   --width-of-input: 300px;
   --height-of-input: 40px;
   --border-height: 2px;
-  --input-bg: rgba(200, 200, 200, 0.5);
-  --border-color: #2f2ee9;
+  --input-bg: var(--background-second);
+  --border-color: var(--accent);
   --border-radius: 30px;
   --after-border-radius: 1px;
 
@@ -16,14 +16,14 @@
   padding-inline: 0.8em;
   border-radius: var(--border-radius);
   transition: border-radius 0.5s ease;
-  background: var(--input-bg,#fff);
+  background: var(--input-bg, var(--background));
 }
 
 .form button {
   border: none;
   background: none;
   cursor: pointer;
-  color: #8b8ba7;
+  color: var(--text-disable);
 }
 
 .input {
