--- a/src/app/core/header/components/navbar/navbar.scss
+++ b/src/app/core/header/components/navbar/navbar.scss
@@ -12,6 +12,7 @@ h1 {
   margin: 0 16px 0 0;
   display: flex;
   list-style: none;
+  color: var(--text-disable);
 }
 
 .nav-item-list {
@@ -21,8 +22,8 @@ h1 {
   a {
     text-decoration: none;
     color: inherit;
-    padding: 4px 6px;
-    border-radius: 4px;
+    padding: 4px 12px;
+    border-radius: 80px;
   }
 
   a:visited {
@@ -30,14 +31,11 @@ h1 {
   }
 
   a:hover {
-    background-color: rgba(128, 128, 128, 0.5);
+    color: var(--text);
   }
 }
 
 .active {
-  background-color: rgba(128, 128, 128, 0.35);
-}
-
-.active:hover {
-  background-color: rgba(128, 128, 128, 0);
+  color: var(--text) !important;
+  background-color: var(--secondary-third);
 }
