--- a/src/app/features/home/components/banner-card/banner-card.html
+++ b/src/app/features/home/components/banner-card/banner-card.html
@@ -26,6 +26,6 @@
     <div class="tracker tr-24"></div>
     <div class="tracker tr-25"></div>
 
-    <div id="card"></div>
+    <div id="card" [ngStyle]="{'background-image': 'url(' + cardImage() + '/high.png)'}"></div>
   </div>
 </div>
