--- a/src/app/features/home/components/banner-home/banner-home.html
+++ b/src/app/features/home/components/banner-home/banner-home.html
@@ -1,14 +1,11 @@
 <div class="banner">
   <div class="element-container">
-    <img src="https://assets.tcgdex.net/fr/swsh/swsh3/logo.png">
-
-    <div class="link-container">
-      <div class="btn-container">
-        <app-primary-button [nameButton]="nameDetailButton"></app-primary-button>
-      </div>
-      <div class="card-container">
-        <app-banner-card></app-banner-card>
-      </div>
+    <img [src]="homeSet()?.logo + '.png'">
+    <app-primary-button [nameButton]="nameDetailButton"></app-primary-button>
+    <div class="card-container">
+      @for (card of bannerCards(); track card) {
+        <app-banner-card [cardImage]="card.image"></app-banner-card>
+      }
     </div>
   </div>
 </div>
