--- a/src/app/features/home/components/banner-home/banner-home.scss
+++ b/src/app/features/home/components/banner-home/banner-home.scss
@@ -1,34 +1,29 @@
 .banner {
   position: relative;
   width: 100%;
-  height: 100%;
-  background-color: rgba(5, 3, 21, 0.85);
+  padding: 32px;
+  background-color: var(--text-disable);
 }
 
 .element-container {
   position: relative;
-  width: 760px;
+  width: auto;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   margin: auto;
-  height: 480px;
 }
 
 .element-container img {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  border-radius: 50%;
-  width: 80%;
-  height: auto;
+  width: auto;
+  height: 180px;
 }
 
-.link-container {
-  width: 100%;
+.card-container {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  margin : auto;
+  margin: 16px;
+  gap: 8px;
 }
