create the carousel in home

--- a/src/app/features/home/components/banner-home/banner-home.html
+++ b/src/app/features/home/components/banner-home/banner-home.html
@@ -4,7 +4,7 @@
     <app-primary-button [nameButton]="nameDetailButton"></app-primary-button>
     <div class="card-container">
       @for (card of bannerCards(); track card) {
-        <app-banner-card [cardImage]="card.image"></app-banner-card>
+        <app-card [cardImage]="card.image" [width]="widthCard" [height]="heightCard"></app-card>
       }
     </div>
   </div>
