--- a/src/app/share/components/card/card.html
+++ b/src/app/share/components/card/card.html
@@ -1,4 +1,4 @@
-<div class="container noselect">
+<div class="container noselect" [ngStyle]="{width: width(), height: height()}">
   <div class="canvas">
     <div class="tracker tr-1"></div>
     <div class="tracker tr-2"></div>
