change the color

--- a/src/app/features/home/components/banner-home/banner-home.scss
+++ b/src/app/features/home/components/banner-home/banner-home.scss
@@ -2,7 +2,7 @@
   position: relative;
   width: 100%;
   padding: 32px;
-  background-color: var(--text-disable);
+  background-color: var(--background-second);
 }
 
 .element-container {
