--- a/src/app/core/header/components/navbar-searchbar/navbar-searchbar.scss
+++ b/src/app/core/header/components/navbar-searchbar/navbar-searchbar.scss
@@ -3,7 +3,7 @@
   --width-of-input: 300px;
   --height-of-input: 40px;
   --border-height: 2px;
-  --input-bg: var(--background-second);
+  --input-bg: var(--secondary);
   --border-color: var(--accent);
   --border-radius: 30px;
   --after-border-radius: 1px;
