--- a/src/app/core/header/components/navbar/navbar.scss
+++ b/src/app/core/header/components/navbar/navbar.scss
@@ -17,13 +17,14 @@ h1 {
 
 .nav-item-list {
   margin: 0 10px 0 0;
-  font-size: 24px;
+  font-size: 20px;
 
   a {
     text-decoration: none;
     color: inherit;
     padding: 4px 12px;
     border-radius: 80px;
+    font-weight: bold;
   }
 
   a:visited {
@@ -37,5 +38,5 @@ h1 {
 
 .active {
   color: var(--text) !important;
-  background-color: var(--secondary-third);
+  background-color: var(--secondary);
 }
