Make the service for home

--- a/src/app/features/home/components/banner-home/banner-home.html
+++ b/src/app/features/home/components/banner-home/banner-home.html
@@ -1,6 +1,6 @@
 <div class="banner">
   <div class="element-container">
-    <img [src]="homeSet()?.logo + '.png'">
+    <img [src]="bannerSet().logo + '.png'" [alt]="bannerSet().name">
     <app-primary-button [nameButton]="nameDetailButton"></app-primary-button>
     <div class="card-container">
       @for (card of bannerCards(); track card) {
