--- a/src/app/features/home/components/set-carousel-home/set-carousel-home.scss
+++ b/src/app/features/home/components/set-carousel-home/set-carousel-home.scss
@@ -13,3 +13,9 @@ h2 {
   width: 50%;
   margin: 0 auto;
 }
+
+.p-carousel-indicator-active .p-carousel-indicator-button {
+  background-color: blue !important;
+}
+
+
