--- a/src/app/features/home/components/carousel-home/carousel-home.html
+++ b/src/app/features/home/components/carousel-home/carousel-home.html
@@ -3,7 +3,7 @@
   <div class="carousel">
     @if (active > 0) {
       <button class="nav left" (click)="prev()">
-        &lt;
+        <i class="pi pi-chevron-circle-left"></i>
       </button>
     }
 
@@ -20,7 +20,7 @@
 
     @if (active < count - 1) {
       <button class="nav right" (click)="next()">
-        &gt;
+        <i class="pi pi-chevron-circle-right"></i>
       </button>
     }
   </div>
