--- a/src/app/features/home/components/set-card/set-card.scss
+++ b/src/app/features/home/components/set-card/set-card.scss
@@ -1,6 +1,7 @@
 .card {
   width: 252px;
   height: 265px;
+  margin: 0 auto;
   background: var(--secondary);
   border-radius: 30px;
   transition: 0.2s ease-in-out;
@@ -79,7 +80,6 @@
 
 .card:hover {
   cursor: pointer;
-  box-shadow: 0px 10px 20px rgba(0,0,0,0.1);
 }
 
 .save:hover {
