--- a/src/app/features/product/components/product-card/product-card.scss
+++ b/src/app/features/product/components/product-card/product-card.scss
@@ -12,6 +12,7 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   overflow: hidden;
   box-sizing: border-box;
+  background-color: white;
 }
 
 .promotion-indicator {
@@ -32,7 +33,7 @@
 .favorite-button {
   position: absolute;
   top: 0;
-  right: 0px;
+  right: 0;
 }
 
 .card-container{
