--- a/src/styles.scss
+++ b/src/styles.scss
@@ -67,3 +67,11 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Jersey25', sans-serif;
 }
+
+.p-carousel-indicator-active .p-carousel-indicator-button {
+  background-color: var(--accent) !important;
+}
+
+.p-carousel-indicator-button:hover {
+  background: var(--secondary) !important;
+}
