--- a/src/app/core/header/components/header/header.scss
+++ b/src/app/core/header/components/header/header.scss
@@ -6,8 +6,12 @@ header {
   position: sticky;
   top: 0;
   z-index: 99;
-  padding: 2px 12px;
+  padding: 6px 18px 2px 18px;
   background-color: var(--background);
   box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.2), 0 0 20px 0 rgba(0, 0, 0, 0.19);
+}
 
+.header-end{
+  display: flex;
+  gap: 8px;
 }
